--- a/static/index.html
+++ b/static/index.html
@@ -9,14 +9,8 @@
 </head>
 
 <body>
-    <div id="container"></div>
-    <div id="info">
-        <!-- <a href="http://threejs.org" target="_blank" rel="noopener">three.js webgl</a> - equirectangular panorama demo.
-        photo by <a href="http://www.flickr.com/photos/jonragnarsson/2294472375/" target="_blank" rel="noopener">Jón
-            Ragnarsson</a>.<br />
-        drag equirectangular texture into the page. -->
-    </div>
-    <script src="main.js"></script>
+    <h1>Site</h1>
+    <a href="view/test">test</a>
 </body>
 
 </html>
