--- a/F - 副本/src/index.html
+++ b/F - 副本/src/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src=""></script>
+    <div id="root"></div>
+    <script src="index.js"></script>
 </body>
 
 </html>
