--- a/F/src/index.html
+++ b/F/src/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="has-navbar-fix-top">
     <div id="root"></div>
     <script src="index.js"></script>
 </body>
