原型机完成！

--- a/F/src/index.html
+++ b/F/src/index.html
@@ -18,7 +18,7 @@
         html,
         body {
             height: 100%;
-            overflow-y: hidden;
+            overflow: hidden;
         }
 
         #particals {
@@ -29,7 +29,7 @@
     </style>
 </head>
 
-<body class="has-navbar-fix-top">
+<body>
     <div id="root" style="height: 100%;"></div>
     <script src="index.js"></script>
     <script>
